# financeATP

./: .dockerignore  .env.docker  .env.example  .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  QUICKSTART.md  docker-compose.yml  modules.md  readme.md  rules.md  setup_database.bat  setup_db.bat  start.bat  start.sh
docker/: entrypoint.sh
docker/init/: 001_init.sql
docs/: DEPLOYMENT.md  openapi.yaml
migrations/: 001_database_foundation.sql  002_auth_tables.sql  003_event_sourcing.sql  004_users.sql  005_accounts.sql  006_ledger.sql  007_idempotency_audit.sql  099_test_database.sql  test_database.sql
scripts/: backup_daily.sh  backup_retention.sh  postgresql_wal_archive.conf
src/: config.rs  db.rs  error.rs  lib.rs  main.rs
src/aggregate/: account.rs  mod.rs  user.rs
src/api/: middleware.rs  mod.rs  routes.rs
src/audit/: mod.rs
src/domain/: amount.rs  context.rs  error.rs  events.rs  mod.rs
src/event_store/: error.rs  mod.rs  repository.rs
src/handlers/: burn_handler.rs  commands.rs  deactivate_user_handler.rs  mint_handler.rs  mod.rs  tests.rs  transfer_handler.rs  update_user_handler.rs  user_handler.rs
src/idempotency/: mod.rs  repository.rs
src/jobs/: mod.rs
src/projection/: mod.rs  service.rs
tests/: integration_api.rs  integration_event_store.rs
tests/common/: mod.rs
