[package]
name = "finance_atp"
version = "0.1.0"
edition = "2021"
authors = ["financeATP Team"]
description = "ATP currency management backend API with event sourcing"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
    "json"
] }

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["db-postgres", "serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Environment & Config
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Security
sha2 = "0.10"
md5 = "0.7"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
rust_decimal_macros = "1"
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }

[profile.release]
lto = true
codegen-units = 1